# curv

./: Cargo.toml
examples/: pedersen_commitment.rs
src/: lib.rs
src/arithmetic/: big_num.rs  mod.rs  traits.rs
src/arithmetic_sgx/: #traits.rs#  big_gmp.rs  big_num.rs  big_num.rs~  mod.rs  mod.rs~  traits.rs  traits.rs~
src/cryptographic_primitives/commitments/: hash_commitment.rs
src/cryptographic_primitives/hashing/: blake2b512.rs  hash_sha256.rs  hash_sha512.rs  hmac_sha512.rs
src/cryptographic_primitives/secret_sharing/: feldman_vss.rs
src/cryptographic_primitives/twoparty/: dh_key_exchange.rs
src/cryptographic_primitives_sgx/commitments/: hash_commitment.rs  pedersen_commitment.rs
src/cryptographic_primitives_sgx/hashing/: blake2b512.rs  hash_sha256.rs  hash_sha512.rs  hmac_sha512.rs  merkle_tree.rs  mod.rs
src/cryptographic_primitives_sgx/proofs/: sigma_correct_homomorphic_elgamal_enc.rs  sigma_correct_homomorphic_elgamal_encryption_of_dlog.rs  sigma_dlog.rs  sigma_ec_ddh.rs  sigma_valid_pedersen.rs  sigma_valid_pedersen_blind.rs
src/cryptographic_primitives_sgx/secret_sharing/: feldman_vss.rs
src/cryptographic_primitives_sgx/twoparty/: coin_flip_optimal_rounds.rs  dh_key_exchange.rs  dh_key_exchange_variant_with_pok_comm.rs
src/elliptic/curves/: bls12_381.rs  curve_jubjub.rs  curve_ristretto.rs  ed25519.rs  mod.rs  secp256_k1.rs  traits.rs
