[package]
name = "curv"
version = "0.2.8"
edition = "2018"

[lib]
crate-type = ["lib"]

[features]
default = ["bigint-std", "std", "mesalock_sgx", "i128"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["mesalock_sgx", "num-integer/std", "num-traits/std", "num-integer/mesalock_sgx", "num-traits/mesalock_sgx"]
bigint = ["num-bigint-dig"]
bigint-std = ["bigint", "num-bigint-dig/std", "num-bigint-dig/mesalock_sgx"]

mesalock_sgx = ["sgx_tstd"]
rust_gmp_sgx = []
ecc-sgx=[]
#"num-integer",
#ec_secp256k1 = ["rust-gmp" ,"ecc", "secp256k1"]
ec_secp256k1 = ["secp256k1-sgx", "rust_gmp_sgx", "ecc-sgx"]
qec_ristretto = ["rust-gmp", "ecc" , "curve25519-dalek"]
ec_ed25519 = ["rust-gmp", "ecc" , "cryptoxide"]
ec_jubjub = ["rust-gmp", "ecc" , "pairing", "sapling-crypto"]
ec_bls12_381 = ["rust-gmp", "ecc" , "bls12_381"]
ecc = []
merkle = ["rust-crypto", "merkle-sha3"]

[dependencies]
#rand = "0.6"
rand = {git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", features=["nightly"] }
sgx_serialize_derive = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
#serde = "1.0"
#serde_derive = "1.0"

sha3 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", tag = "sgx_1.1.3"  }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", tag = "sgx_1.1.3"  }
hmac = { git = "https://github.com/mesalock-linux/rustcrypto-MACs-sgx", tag = "sgx_1.1.3"  }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx", tag = "sgx_1.1.3" }

zeroize = "0.10"
#sha3 = "0.8.2"
#sha2 = "0.8.0"
#hmac = "0.7.1"
#digest = "0.8.1"
#hex = "^0.3"
#blake2b_simd = "0.5.7"
secp256k1-sgx = { path = "/root/rust-secp256k1-sgx", optional = true, features=["rand"] }
#num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx", features=["serde"], optional=true, tag = "sgx_1.1.3" }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx", features=["serde"], optional=true}
#num-bigint-dig = { git = "https://github.com/mesalock-linux/num-bigint-sgx", features=["zeroize", "nightly", "serde", "mesalock_sgx"], optional=true, rev="bfba2d78dbe6272861f040a96edc2d1c23665d07", default-features=false }
num-bigint-dig = { path = "/root/num-bigint-sgx", optional=true } 
#serde = { version = "1.0.117", git = "https://github.com/mesalock-linux/serde-sgx", default-features = false, features = ["derive","mesalock_sgx"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { version = "1.0.117", git = "https://github.com/mesalock-linux/serde-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx", optional=true }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx", optional=true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true} 
#sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", features = ["backtrace"] }
#sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }


[dependencies.rust-crypto]
version = "^0.2"
optional = true

[dependencies.merkle-sha3]
version = "^0.1"
optional = true


[dependencies.bls12_381]
version = "0.1.1"
optional = true

[dependencies.sapling-crypto]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"
optional = true

[dependencies.pairing]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"
optional = true

[dependencies.rust-gmp]
version = "0.5.0"
features = ["serde_support"]
git = "https://github.com/KZen-networks/rust-gmp"
optional = true

[dependencies.secp256k1]
version = "0.19.0"
features = ["serde"]
optional = true

[dependencies.curve25519-dalek]
version = "1.2.3"
optional = true

[dependencies.cryptoxide]
version = "0.1.2"
optional = true

#[dev-dependencies]
#bincode = "1.1"
#serde_json = "1.0"

