[package]
name = "curv"
version = "0.2.7"
edition = "2018"

[lib]
crate-type = ["lib"]

[features]
default = []
ec_secp256k1 = ["ecc", "secp256k1"]
ec_ristretto = [ "ecc" , "curve25519-dalek"]
ec_ed25519 = [ "ecc" , "cryptoxide"]
ec_jubjub = [ "ecc" , "pairing", "sapling-crypto"]
ec_bls12_381 = [ "ecc" , "bls12_381"]
ecc = []
merkle = ["rust-crypto", "merkle-sha3"]

[dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
serde = "1.0"
serde_derive = "1.0"
zeroize = "0.10"
sha3 = "0.8.2"
sha2 = "0.8.0"
hmac = "0.7.1"
digest = "0.8.1"
hex = "^0.3"
blake2b_simd = "0.5.7"
num-bigint-dig = "0.6.1"
num-traits = "0.2"
num-integer = "0.1.44"


[dependencies.rust-crypto]
version = "^0.2"
optional = true

[dependencies.merkle-sha3]
version = "^0.1"
optional = true


[dependencies.bls12_381]
version = "0.1.1"
optional = true

[dependencies.sapling-crypto]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"
optional = true

[dependencies.pairing]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"
optional = true

[dependencies.secp256k1]
version = "0.19.0"
features = ["serde"]
optional = true

[dependencies.curve25519-dalek]
version = "1.2.3"
optional = true

[dependencies.cryptoxide]
version = "0.1.2"
optional = true

[dev-dependencies]
bincode = "1.1"
serde_json = "1.0"
floating-duration = "0.1.2"
